--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^5.5.0",
     "fetch-cookie": "^0.7.2",
     "koa": "^2.5.2",
-    "node-fetch": "^2.2.0"
+    "node-fetch": "^2.2.0",
+    "tough-cookie": "^2.4.3"
   }
 }
