--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fetch-cookie": "^0.7.2",
     "koa": "^2.5.2",
     "node-fetch": "^2.2.0",
-    "tough-cookie": "^2.4.3"
+    "tough-cookie": "^2.4.3",
+    "xml2js": "^0.4.19"
   }
 }
