--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Lin Jinxing",
   "license": "MIT",
   "scripts": {
+    "start": "node src/index.js",
     "lint": "eslint src/**"
   },
   "dependencies": {
