--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "fetch-cookie": "^0.7.2",
+        "file-loader": "^2.0.0",
         "koa": "^2.5.2",
         "node-fetch": "^2.2.0",
         "react": "^16.5.1",
@@ -25,12 +26,19 @@
         "@babel/core": "^7.0.1",
         "@babel/preset-env": "^7.0.0",
         "@babel/preset-react": "^7.0.0",
+        "autoprefixer": "^9.1.5",
         "babel-eslint": "^9.0.0",
         "babel-loader": "^8.0.2",
+        "clean-webpack-plugin": "^0.1.19",
+        "css-loader": "^1.0.0",
         "eslint": "^5.6.0",
         "eslint-loader": "^2.1.0",
         "eslint-plugin-react": "^7.11.1",
         "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.4.2",
+        "postcss-loader": "^3.0.0",
+        "style-loader": "^0.23.0",
+        "url-loader": "^1.1.1",
         "webpack": "^4.19.0",
         "webpack-cli": "^3.1.0",
         "webpack-dev-server": "^3.1.8"
