--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,6 @@
             }
         }],
         "@babel/preset-react"
-    ]
+    ],
+    "plugins": ["react-hot-loader/babel", "react-require"]
 }
